[tool.poetry]
name = "python-cheapest-flight"
version = "0.1.0"
description = ""
authors = ["Thibauld Croonenborghs <thibauld.croonenborghs@tomtom.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.57.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
